# pointchargefields

./: CMakeLists.txt  README.md
notebooks/: graphicsandanimexamples.ipynb  pointchargefield.ipynb
source/: guitest.py
